Adicionando botão de estilo e area de seleção de arquivos

--- a/styles/global.css
+++ b/styles/global.css
@@ -140,6 +140,11 @@ fieldset {
   gap: .75rem;  
 }
 
+.margin-top {
+  margin-top: 1.75rem;
+  gap: 1rem;
+}
+
 body {
   background-color: var(--shape-background);
 }
