--- a/styles/input.css
+++ b/styles/input.css
@@ -47,9 +47,30 @@
   }
 
   & textarea {
-    width: 35rem;
-    height: 8.5rem;
+    /* width: 35rem;
+    height: 8.5rem; */
+    min-height: 8.5rem;
+    min-width: 35rem;
+    max-width: 35rem;
+    max-height: 8.5rem;
     margin-bottom: 3rem;
+  }
+}
+
+.input-wrapper1 {
+  display: grid;  
+  margin-top: 1rem;
+
+  & input {
+    width: 35rem;
+    height: 3rem;
+    margin-top: .75rem;
+    margin-bottom: .5rem;   
+  }
+
+  & textarea {
+    width: 35rem;
+    height: 8.5rem;    
   }
 }
 
@@ -158,7 +179,7 @@ input[type="datetime-local"] {
     border-radius: 50%;
     height: 2.5rem;
     width: 2.5rem;  
-    cursor: pointer;    
+    cursor: pointer;
     border: .375rem solid var(--shape-button);    
   }
   
@@ -209,7 +230,27 @@ input[type="datetime-local"] {
   }  
 }
 
+.fullname { 
 
+  & :invalid {
+    border: 0.125rem solid var(--color-danger);       
+  }
+
+  & span {
+    color: var(--color-danger);
+
+  }
+}
+
+.error {
+border: 1px solid red;
+font-weight: 400;
+
+ & span {
+  font-weight: normal;
+  font-weight: 400;
+ }
+}
 
 
 
