--- a/styles/button.css
+++ b/styles/button.css
@@ -4,7 +4,7 @@
   height: 30px;  
 
   & input {
-    display: none;
+    display: none;    
   }
 
   & label {
@@ -13,7 +13,8 @@
   border-radius: 1.875rem;
   cursor: pointer;  
   position: relative;
-  transition: background-color 0.3s; 
+  transition: background-color 0.3s;
+  
   }
 
   & label::after {
@@ -25,7 +26,7 @@
   position: absolute;
   top: 2px;  
   width: 1.5rem;
-  transition: transform 0.3s; 
+  transition: transform 0.3s;  
   }
 
   & input:checked + label::after {
@@ -35,7 +36,7 @@
 
   & input:checked + label {
     background-color: var(--brand-color-light);    
-  }
+  }  
 }
 
 .drop-area {  
@@ -43,7 +44,7 @@
   width: 7.4375rem;
   height: 2.5rem;  
   background-color: var(--shape-button);
-  border-radius: .5rem;
+  border-radius: .5rem;  
    
 
   & input {
@@ -67,7 +68,11 @@
   }  
 }
 
-.left-content {  
+.left-content {
+
+  & legend {
+    margin-bottom: 1rem;
+  }
   
   & figcaption {
     margin-left: 4.375rem;
@@ -78,6 +83,27 @@
 #upload {  
   margin-left: 8.125rem;
   margin-top: -1.875rem;
-  width: 11.875rem;
-  
+  width: 11.875rem;  
+}
+
+.send {
+  text-align: right;
+
+ & button {  
+  all: unset;
+  cursor: pointer;
+  position: relative;
+  width: 11.0625rem;
+  height: 3rem;  
+  background-color: var(--brand-color-dark);
+  border-radius: .5rem;
+  text-align: center;
+  color: var(--text-heading);  
+ }
+
+ & button::before {
+  content: url(/assets/icons/ticket.svg);
+  margin-right: .75rem;
+  vertical-align: middle;  
+ }
 }
