--- a/styles/global.css
+++ b/styles/global.css
@@ -93,11 +93,7 @@ fieldset {
   border: none;
 }
 
-.invite {
-  padding: 5rem 8.125rem 5rem 8.125rem;
-  margin-block: 1.25rem;
-  border-radius: .75rem;
-}
+
 
 .grid {
   display: grid;   
@@ -159,6 +155,12 @@ body {
 
 main {  
   background-color: var(--shape-body);  
+}
+
+main {
+  & h2 {
+    margin-bottom: 2.5rem;
+  }
 }
 
 
